infra/timeweb/10-gitops/apps/mailpit/mailpit.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: platform
  annotations:
    argocd.argoproj.io/sync-wave: "65"
  labels:
    app: mailpit
spec:
  selector:
    app: mailpit
  ports:
    - name: web
      protocol: TCP
      port: 8025
      targetPort: 8025
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
  type: ClusterIP
